Fix support button positioning on mobile & combine three dots into the event's navigation bar (#7483)

--- a/app/assets/stylesheets/components/_support_button.scss
+++ b/app/assets/stylesheets/components/_support_button.scss
@@ -6,3 +6,9 @@
   background-color: rgba(51, 142, 218, 0.825) !important;
   color: white;
 }
+
+@media (max-width: 56em) {
+  .support-menu__button {
+    bottom: 64px !important;
+  }
+}
